first version of vocabulary classes for parking and dul ontology